--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -1,6 +1,7 @@
 .items {
     width: 100%;
     max-width: 500px;
+    min-height: 155px;
     padding: 20px;
     border-radius: 6px;
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.75);
