--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@ select {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-start;
   gap: 30px;
 }
 
